// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`match played to a decision > reaches a winner and matches the recorded outcome 1`] = `
{
  "matchWinner": 1,
  "p1": {
    "hp": 0,
    "state": "KO",
    "x": 528.7381,
  },
  "p2": {
    "hp": 35.1507,
    "state": "VICTORY",
    "x": 701.7463,
  },
  "phase": "ending",
  "round": 2,
  "roundWins": [
    0,
    2,
  ],
  "tick": 2724,
}
`;

exports[`one-player match against the CPU > replays identically, including every CPU decision 1`] = `
[
  "t150:7b5434ce",
  "t300:a984b99b",
  "t450:6f2091b5",
  "t600:1c9775d",
  "t750:6c8506b7",
  "t900:5ef37552",
]
`;

exports[`one-player match against the CPU > replays identically, including every CPU decision 2`] = `
{
  "matchWinner": null,
  "p1": {
    "hp": 62.2216,
    "state": "HEAVY_ATTACK",
    "x": 619.9651,
  },
  "p2": {
    "hp": 100,
    "state": "BLOCK",
    "x": 904.5,
  },
  "phase": "fight",
  "round": 1,
  "roundWins": [
    0,
    0,
  ],
  "tick": 900,
}
`;

exports[`projectile and zone characters > matches the recorded checksum trail 1`] = `
[
  "t120:9dce3513",
  "t240:3ff09381",
  "t360:edd6cc9c",
  "t480:53c9e889",
  "t600:34b4903c",
  "t720:cd7d69b3",
  "t840:4b23a8aa",
]
`;

exports[`two-player scripted match > matches the recorded checksum trail 1`] = `
[
  "t120:1e061508",
  "t240:378bc55e",
  "t360:ffaea34a",
  "t480:22dd8c64",
  "t600:1f2f9cfb",
  "t720:f2c864d0",
  "t840:bc7a8f02",
  "t960:d95374d",
  "t1080:28fd4766",
  "t1200:ebef6c8b",
]
`;

exports[`two-player scripted match > matches the recorded final state 1`] = `
{
  "matchWinner": null,
  "p1": {
    "hp": 33.8878,
    "state": "HEAVY_ATTACK",
    "x": 389.8073,
  },
  "p2": {
    "hp": 82.9903,
    "state": "SPECIAL",
    "x": 655.2838,
  },
  "phase": "fight",
  "round": 1,
  "roundWins": [
    0,
    0,
  ],
  "tick": 1200,
}
`;
